--- a/kernel.tex
+++ b/kernel.tex
@@ -1343,7 +1343,15 @@ jezgra operativnog sistema koji treba da predstavlja most izmedju hardvera i
 softvera. Drago mi je shto sam odabrao ovako tezhak projekat za maturski rad iz
 razloga shto mi je to pomoglo da probijem barijeru i ulozhim puno truda da bih
 zapravo razumeo kako rade operativni sistemi i koliko je sofisticiran njihov
-dizajn.
+dizajn.\\
+
+Izabrao sam ovu temu iz razloga shto istovremeno povezuje {\eng Linux} i
+programiranje u {\eng C} programskom jeziku, moje trenutno dve omiljene stvari,
+na predlog mog mentora. Iskoristio bih ovu priliku da se zahvalim profesoru
+Miloshu Arsic1u, kao i profesoru Filipu Had2ic1u na sjajnim idejama i
+usmeravanju prilikom izrade ovog maturskog rada, kao i svim drugarima,
+profesorima i porodici koji su me podrzhali.
+
 
 \thispagestyle{empty}
 \mbox{}
